fixed contrast

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ main{
 }
 
 footer{
-  background-color: #4787b7;
+  background-color: #bacddb;
 }
 
 li{
